# WvWOverview

./: .gitignore  Cargo.toml  README.md  app.db  app.py  database.py  deplay.py  deploy.py  guilds.json  guilds.txt  gw2api.py  helper.py  index.html  index_old2.html  install.sh  json_updator.py  main.py  mydb.sqlite  mydb.sqlite-journal  requirements.txt  run.sh  services.py  tasks.py  team_json_updator.py  teams.json  time.py  update_git.sh  wvwoverview.ini
backend/: .env  Cargo.toml  mydb.sqlite
backend/src/: database.rs  gw2api.rs  main.rs  processing.rs  task_queue.rs
legacy/: app.db  app.py  gw2api.py
legacy/backend/: mydb.sqlite
legacy/backend/src/: database.rs  gw2api.rs  processing.rs  task_queue.rs
legacy/src/: main.rs
src/: data.rs  database.rs  gw2api.rs  main.rs  rate_limiter.rs  tasks.rs
static/: important_guilds.txt
static/frontend/: index copy.html  index.html
