[package]
name = "WvWOverview"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "macros"
] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
chrono = "0.4.42"
futures = "0.3.31"