[package]
name = "WvWOverview"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "macros"
] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

serde_json = "1.0"
chrono = "0.4.42"
futures = "0.3.31"
unicode-normalization = "0.1.24"
tower-http = { version = "0.6.6", features = ["compression-gzip", "fs"] }
phf = { version = "0.13.1", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true


[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
